external-crates/move/crates/move-compiler/tests/move_check/parser/expr_if_missing_parens.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_if_missing_parens.move:4:12
  │
4 │         if v < 3 ()
  │            ^
  │            │
  │            Unexpected 'v'
  │            Expected '('
